<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
	android:focusableInTouchMode="true" 
	android:background="@color/bg_register"
	android:padding="50dp"
    tools:context="de.codenis.mdcs.LoginActivity" >

     <!-- <TextView android:id="@+id/textview"
        android:text="@string/login_text" 
        android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:textSize="35sp"
      	android:layout_alignParentTop="true"
      	android:layout_centerHorizontal="true"
      	android:textColor="#38ACEC" 
      	android:textColorHint="#ffff299f"/> -->
<!-- 
   <ImageView
       android:id="@+id/login_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textview"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="39dp"
       android:contentDescription="@string/login_content_discription"
       android:src="@drawable/ic_launcher" /> -->

   <EditText
       android:id="@+id/password"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="186dp"
       android:padding="10dp"
       android:singleLine="true"
       android:hint="@string/password"
       android:inputType="textPassword"
       android:textColor="@color/input_register"
       android:textColorHint="@color/input_register_hint"
       android:background="@color/white" />

   <EditText
       android:id="@+id/username"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="134dp"
       android:hint="@string/username"
       android:padding="10dp"
       android:singleLine="true"
       android:textColor="@color/input_register"
       android:textColorHint="@color/input_register_hint"
       android:background="@color/white" />

   <Button
       android:id="@+id/button_login"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="258dp"
       android:background="#ea4c88"
       android:textColor="@color/white"
       android:text="@string/login_button" />

</RelativeLayout>
