<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register" >
 
<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
	android:focusableInTouchMode="true" 
	android:background="@color/bg_register"
	android:padding="50dp"
    tools:context="de.codenis.mdcs.AddPlanActivity" >

 		<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_number"
		android:visibility="invisible"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/whiteDull"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 		<EditText
            android:id="@+id/number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/plan_number"
			android:visibility="invisible"
            android:padding="10dp"
            android:textSize="22sp"
	       	android:singleLine="true"
	       	android:textColorHint="@color/input_register_hint"
	       	android:background="@color/white" />

	    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" 
        android:textSize="22sp"
        android:layout_marginTop="120dp"
        android:textColor="@color/whiteDull" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
	      <EditText
            android:id="@+id/plan_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="22sp"
            android:hint="@string/description" 
            android:textColorHint="@color/input_register_hint"
            android:background="@color/white" >
        </EditText>
       

	     <ImageView
            android:id="@+id/plan_view"
            android:layout_width="200dp"
	        android:layout_height="200dp"
			android:layout_marginStart="40dp"
	        android:layout_marginTop="600dp"
			android:visibility="invisible"
			android:onClick="openPdfClick"
	        android:src="@drawable/pdflogo" />

		<TextView
			android:id="@+id/plan_url"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="830dp"
			android:layout_marginStart="350dp"
			android:visibility="invisible"
			android:text="Pdf file link"
			android:clickable="true"
			android:onClick="openPdf"
			android:textColor="#ffff299f"
			android:textSize="22sp"
			android:padding="10dp"
			android:textAppearance="?android:attr/textAppearanceMedium"
			/>

	    <Button
            android:id="@+id/upload_plan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
          	android:layout_marginTop="850dp"
          	android:layout_marginStart="50dp"
			android:onClick="selectPlan"
            android:text="Upload"
            android:textSize="22sp"
            android:textColorHint="@color/input_register_hint"
	       	android:background="@color/grey" />
        
        <Button
            android:id="@+id/save"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1070dp"
            android:layout_marginStart="250dp"
            android:onClick="onSave"
            android:text="@string/save"
            android:background="#ea4c88"
       		android:textColor="@color/white" />

         <Button
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1070dp"
            android:onClick="onBack"
            android:text="@string/back"
            android:background="#ea4c88"
       		android:textColor="@color/white" />


        <Button
            android:id="@+id/delete"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1070dp"
            android:layout_marginStart="500dp"
            android:layout_marginEnd="25dp"
            android:onClick="onDeletePlan"
            android:text="Plan Löschen"
            android:visibility="invisible"
            android:background="#ea4c88"
       		android:textColor="@color/white" />

</RelativeLayout>
</ScrollView>

 
